--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <video autoplay loop muted id="video-bg">
-    <source src="img/pexels-cottonbro-9665235 (1080p).mp4" type="video/mp4">
+    <source src="./img/pexels_videos_2611250 (2160p).mp4" type="video/mp4">
     </video>
       <nav>
         <ul>
